--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1> Archit Ojha</h1> 
-    📞+91 91709 99269 📧<a href="architojha000@gmail.com" target="_blank">Email</a>  🌐<a href = "github.com/architojha06" target="_blank">Github</a> 🔗In <a href="linkedin.com/in/archit-ojha-a630371b3" target="_blank"> linkedin</a>
+    📞+91 91709 99269 📧<a href="architojha000@gmail.com" target="_blank">Email</a>  🌐<a href = "https://github.com/architojha06" target="_blank">Github</a> 🔗In <a href="linkedin.com/in/archit-ojha-a630371b3" target="_blank"> linkedin</a>
     <p><h2> Education </h>
     <hr>
     <h3> RNS Institute of Technology , Bangalore</h3>                                        Sep 2025- June 2029
@@ -42,4 +42,5 @@
 
 
 </body>
+
 </html>
